<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid_background_shape"
    tools:context=".LevelPickActivity">

    <Button
        android:id="@+id/easy_pick_btn"
        android:layout_width="188dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:onClick="pickEasy"
        android:text="@string/easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/medium_pick_btn"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:onClick="pickMedium"
        android:text="@string/medium"
        app:layout_constraintBottom_toTopOf="@+id/hard_pick_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_pick_btn" />

    <Button
        android:id="@+id/hard_pick_btn"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginBottom="144dp"
        android:onClick="pickHard"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>