<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid_background_shape"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/quit_app_btn"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:onClick="quitGame"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/high_scores_btn"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:onClick="switchToHighScoresLevelList"
        android:text="@string/high_scores"
        app:layout_constraintBottom_toTopOf="@+id/quit_app_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_new_game_btn"
        android:layout_width="225dp"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:onClick="switchToGameScene"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/high_scores_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="277dp"
        android:layout_height="272dp"
        app:layout_constraintBottom_toTopOf="@+id/start_new_game_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/title_image" />
</androidx.constraintlayout.widget.ConstraintLayout>