<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_to_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="backToMenu"
        android:text="@string/back_without_saving"
        app:layout_constraintEnd_toStartOf="@+id/save_and_quit_btn"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name_textbox" />

    <Button
        android:id="@+id/save_and_quit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:onClick="saveAndBackToMenu"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name_textbox" />

    <EditText
        android:id="@+id/player_name_textbox"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/insert_name_here"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_spent_textbox" />

    <TextView
        android:id="@+id/level_name_textView"
        android:layout_width="139dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_spent_textbox"
        android:layout_width="150dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_name_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>